--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -315,7 +315,7 @@
 }
 
 .moj-datepicker-toggle {
-  background-color: govuk-colour('black');
+  background-color: govuk-colour('blue');
   color: govuk-colour('white');
   outline: 3px solid rgba(0, 0, 0, 0);
   outline-offset: -3px;
