nearly adding offence 1

--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -391,11 +391,10 @@
     <h2 class="govuk-heading-m govuk-!-margin-top-7">Check and submit for review</h2>
     
     <!-- Review button, initially hidden -->
-    <button id="review-button" class="govuk-button govuk-!-margin-bottom-8" style="display: none;">
+    <button id="review-button" class="govuk-button govuk-!-margin-bottom-8" onclick="window.location.href='./check-submit.html';" style="display: none;">
       Review account
     </button>
 
-    <!-- Check message, initially visible -->
     <p id="check-message" class="govuk-body govuk-!-margin-bottom-8">
       Check that all required fields have been entered before you submit for review.
     </p>
