--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -28,6 +28,12 @@
           },
           items: [
             {
+              value: "select",
+              text: "Select title",
+              selected: true,
+              disabled: true
+            },
+            {
               value: "Mr",
               text: "Mr"
             },
