--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,20 @@
 
 // Add extra styles here
 
+.imposition {
+  padding: 20px 5px 0px 5px;
+}
+
+.creditors {
+  padding: 0px 5px 0px 5px;
+}
+
+
+.impositionWrapper {
+  background-color: govuk-colour('light-grey');
+}
+
+
 
 .moj-header__container {
   max-width: 1280px;
